--- a/build.gradle
+++ b/build.gradle
@@ -63,7 +63,10 @@ dependencies {
 	testImplementation 'org.assertj:assertj-core:3.18.1'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
+	compileOnly 'org.projectlombok:lombok:1.18.30'
+	annotationProcessor 'org.projectlombok:lombok:1.18.30'
+	testCompileOnly 'org.projectlombok:lombok:1.18.30'
+	testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
 	integrationTestImplementation sourceSets.main.output
 	integrationTestImplementation sourceSets.test.output
 }
