--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'com.h2database:h2'
 	implementation 'com.google.code.gson:gson:2.8.2'
+	implementation 'org.springframework.boot:spring-boot-starter-cache:3.1.5'
+	implementation 'com.github.ben-manes.caffeine:caffeine'
 	testImplementation 'junit:junit:4.13.1'
 	testImplementation 'org.assertj:assertj-core:3.18.1'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
