--- a/build.gradle
+++ b/build.gradle
@@ -33,14 +33,14 @@ configurations {
 	integrationTestRuntimeOnly.extendsFrom testRuntimeOnly
 }
 
-task unitTest(type: Test) {
+tasks.register('unitTest', Test) {
 	useJUnitPlatform()
 	group = 'verification'
 	testClassesDirs = sourceSets.test.output.classesDirs
 	classpath = sourceSets.test.runtimeClasspath
 }
 
-task integrationTest(type: Test) {
+tasks.register('integrationTest', Test) {
 	description = 'Runs the integration tests.'
 	group = 'verification'
 
@@ -58,9 +58,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'com.h2database:h2'
-	implementation 'com.google.code.gson:gson:2.8.2'
+	implementation 'com.google.code.gson:gson:2.9.1'
 	implementation 'org.springframework.boot:spring-boot-starter-cache:3.1.5'
 	implementation 'com.github.ben-manes.caffeine:caffeine'
+	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
 	testImplementation 'junit:junit:4.13.1'
 	testImplementation 'org.assertj:assertj-core:3.18.1'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
@@ -68,6 +69,7 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok:1.18.30'
 	annotationProcessor 'org.projectlombok:lombok:1.18.30'
 	testCompileOnly 'org.projectlombok:lombok:1.18.30'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
 	integrationTestImplementation sourceSets.main.output
 	integrationTestImplementation sourceSets.test.output
@@ -77,6 +79,6 @@ tasks.named('test') {
 	useJUnitPlatform()
 }
 
-tasks.withType(Test) {
+tasks.withType(Test).configureEach {
 	exclude '**/*IntegrationTest*'
 }
