--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,7 @@ dependencies {
 	implementation 'com.google.code.gson:gson:2.9.1'
 	implementation 'org.springframework.boot:spring-boot-starter-cache:3.1.5'
 	implementation 'com.github.ben-manes.caffeine:caffeine'
+	implementation 'org.hibernate:hibernate-ehcache:5.6.15.Final'
 	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
 	testImplementation 'junit:junit:4.13.1'
 	testImplementation 'org.assertj:assertj-core:3.18.1'
