--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'com.h2database:h2'
+	implementation 'org.hibernate:hibernate-core:6.4.4.Final'
 	implementation 'com.google.code.gson:gson:2.9.1'
 	implementation 'org.springframework.boot:spring-boot-starter-cache:3.1.5'
 	implementation 'com.github.ben-manes.caffeine:caffeine'
